[Aalekh] MOD: Updated api of get all books added pagination , added search suggestion api, redis implementation and made changes in book rspec and swagger.yaml
